Update WordPress link in index.html

--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
                 <p>A space where I share my thoughts, reflections, and personal experiences. Join me as I explore ideas
                     beyond the technical realm.</p>
                 <a href="
-                https://wordpress.com/posts/suchitravelusamy.wordpress.com " target="_blank" class="icon-link"
+               https://suchitravelusamy.wordpress.com/?_gl=1*nqmsv5*_gcl_au*MTg3Mjc1MzMzMi4xNzY1MDA0MDE0" target="_blank" class="icon-link"
                     style="color:darkorange; text-decoration: none;">
                     Explore here
                     <svg class="bi" aria-hidden="true">
